--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudo Gama Academy</title>
+    <p> Adicionado conteúdo a partir do Github </p>
 </head>
 <body>
     <h1> Minha Página HTML</h1>
